--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,22 @@ body {
 -------------------------------------------------- */
 .footer {
 	position: absolute;
-	width: 100%; height: 60px;
+	width: 100%;
 	bottom: 0;
 	background-color: #f5f5f5;
 }
 .footer .text-muted {
-	margin: 20px 0;
+	margin: 5px 0;
+}
+
+@media (min-width: 768px) {
+	.footer .text-muted {
+		margin: 20px 0;
+	}
+	.footer .title {
+		text-align: left;
+	}
+	.footer .powered {
+		text-align: right;
+	}
 }
