--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,28 @@ body {
 .btn-control button {
 	margin-bottom: 5px;
 }
-
+.msg-loading {
+	position: fixed;
+	top: 0; left: 50%;
+	width: 150px;
+	margin-left: -75px;
+	font-size: 12px; color: #333;
+	z-index: 1050;
+	border-radius: 0px;
+	background: #F9EDBE !important;
+	border: 1px solid #F0C36D !important;
+	text-align: center;
+	padding: 5px;
+	opacity: 0.8;
+}
+.msg-loading.animation {
+	-webkit-transition: all ease 0.2s;
+	transition: all ease 0.2s;
+}
+.msg-loading.animation.ng-hide {
+	top: -20px;
+	opacity: 0;
+}
 
 
 /* Third parts
